--- a/src/CodeStyle/Core/Analyzers/Microsoft.CodeAnalysis.CodeStyle.csproj
+++ b/src/CodeStyle/Core/Analyzers/Microsoft.CodeAnalysis.CodeStyle.csproj
@@ -30,6 +30,7 @@
     <Compile Include="..\..\..\Compilers\Core\Portable\InternalUtilities\EnumerableExtensions.cs" Link="Formatting\EnumerableExtensions.cs" />
     <Compile Include="..\..\..\Compilers\Core\Portable\InternalUtilities\ExceptionUtilities.cs" Link="InternalUtilities\ExceptionUtilities.cs" />
     <Compile Include="..\..\..\Compilers\Core\Portable\InternalUtilities\IReadOnlySet.cs" Link="InternalUtilities\IReadOnlySet.cs" />
+    <Compile Include="..\..\..\Compilers\Core\Portable\InternalUtilities\ImmutableArrayExtensions.cs" Link="InternalUtilities\ImmutableArrayExtensions.cs" />
     <Compile Include="..\..\..\Compilers\Core\Portable\InternalUtilities\KeyValuePairUtil.cs" Link="InternalUtilities\KeyValuePairUtil.cs" />
     <Compile Include="..\..\..\Compilers\Core\Portable\InternalUtilities\PerformanceSensitiveAttribute.cs" Link="PerformanceSensitiveAttribute.cs" />
     <Compile Include="..\..\..\Compilers\Core\Portable\InternalUtilities\SpecializedCollections.cs" Link="InternalUtilities\SpecializedCollections.cs" />
@@ -83,6 +84,9 @@
     <Compile Include="..\..\..\Workspaces\Core\Portable\Formatting\Engine\TokenPairWithOperations.cs" Link="Formatting\Engine\TokenPairWithOperations.cs" />
     <Compile Include="..\..\..\Workspaces\Core\Portable\Formatting\Engine\TokenStream.Changes.cs" Link="Formatting\Engine\TokenStream.Changes.cs" />
     <Compile Include="..\..\..\Workspaces\Core\Portable\Formatting\Engine\TokenStream.cs" Link="Formatting\Engine\TokenStream.cs" />
+    <Compile Include="..\..\..\Workspaces\Core\Portable\Formatting\Engine\TokenStream.ITriviaDataGetter.cs" Link="Formatting\Engine\TokenStream.ITriviaDataGetter.cs" />
+    <Compile Include="..\..\..\Workspaces\Core\Portable\Formatting\Engine\TokenStream.OriginalTriviaDataGetter.cs" Link="Formatting\Engine\TokenStream.OriginalTriviaDataGetter.cs" />
+    <Compile Include="..\..\..\Workspaces\Core\Portable\Formatting\Engine\TokenStream.TriviaDataGetter.cs" Link="Formatting\Engine\TokenStream.TriviaDataGetter.cs" />
     <Compile Include="..\..\..\Workspaces\Core\Portable\Formatting\Engine\TokenStream.Iterator.cs" Link="Formatting\Engine\TokenStream.Iterator.cs" />
     <Compile Include="..\..\..\Workspaces\Core\Portable\Formatting\Engine\TreeData.cs" Link="Formatting\Engine\TreeData.cs" />
     <Compile Include="..\..\..\Workspaces\Core\Portable\Formatting\Engine\TreeData.Debug.cs" Link="Formatting\Engine\TreeData.Debug.cs" />
