change Nuget package ID to LostTech-specific

--- a/src/Workspaces/CSharp/Portable/Microsoft.CodeAnalysis.CSharp.Workspaces.csproj
+++ b/src/Workspaces/CSharp/Portable/Microsoft.CodeAnalysis.CSharp.Workspaces.csproj
@@ -10,6 +10,7 @@
 
     <!-- NuGet -->
     <IsPackable>true</IsPackable>
+    <PackageId>LostTech.CodeAnalysis.CSharp.Workspaces</PackageId>
     <PackageDescription>
       .NET Compiler Platform ("Roslyn") support for analyzing C# projects and solutions.
     </PackageDescription>
