--- a/src/Workspaces/Core/Portable/Microsoft.CodeAnalysis.Workspaces.csproj
+++ b/src/Workspaces/Core/Portable/Microsoft.CodeAnalysis.Workspaces.csproj
@@ -11,7 +11,7 @@
 
     <!-- NuGet -->
     <IsPackable>true</IsPackable>
-    <PackageId>Microsoft.CodeAnalysis.Workspaces.Common</PackageId>
+    <PackageId>LostTech.CodeAnalysis.Workspaces.Common</PackageId>
     <PackageDescription>
       A shared package used by the .NET Compiler Platform ("Roslyn") including support for analyzing projects and solutions.
       Do not install this package manually, it will be added as a prerequisite by other packages that require it.
